--- a/Changes
+++ b/Changes
@@ -3,8 +3,11 @@ Revision history for MUGS
 {{$NEXT}}
 
 0.0.4 *WIP*
+  [Packaging]
+  - Support Docker builds
+
+  [Docs]
   - Several new or expanded docs
-  - Support Docker builds (WIP)
 
 0.0.3 2021-03-04
   - First public upload
