--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for MUGS
 
+0.0.6  *WIP*
+  [Bug fixes]
+  - Add native pq exclusion in README SYNOPSIS
+
+  [Docs]
+  - Roadmap: several updates to intro and 0.1 todos (mostly completed tasks)
+  - Release guide: minor fixes, plus switch to mugs-release tool for some steps
+
+
 0.0.5  2021-03-15
   [UIs]
   - All current games are now supported in both CLI and WebSimple UIs
