Add doc changes for 0.1.2 to Changes

--- a/Changes
+++ b/Changes
@@ -1,5 +1,20 @@
 Revision history for MUGS
 
+0.1.2  *WIP*
+  [Docs]
+  - Add top-level docs/ README
+  - How To
+    * Add new docs/howto/ tree
+    * Move Release Guide to docs/howto/
+    * Add Installing MUGS guide
+    * Add WIP port-a-game and create-a-ui guides
+  - Design
+    * Add two "Life of a ..." docs from local tree (both need updates)
+    * Add Game Classes orientation doc
+    * Add Data Validation design doc
+    * Add Supporting "Bullet Hell" Games rumination doc
+    * Add Logo Ideas historical doc
+
 0.1.1  2021-04-15
   [Docs]
   - Roadmap
