Fill in core bits of 0.1.2 release announcement

--- a/docs/announce/v0.1.2.md
+++ b/docs/announce/v0.1.2.md
@@ -54,9 +54,100 @@ and creates a default MUGS identity universe.  `Dockerfile.test` builds on that
 by also installing test identities into the default universe.
 
 
-## Improvements
+## JSON → CBOR
 
-...
+The single largest change in 0.1.2 is the switch of message serialization from
+JSON to CBOR, based on the new
+[TinyFloats](https://github.com/japhb/TinyFloats),
+[CBOR::Simple](https://github.com/japhb/CBOR-Simple), and
+[Cro::CBOR](https://github.com/japhb/Cro-CBOR) modules, all of which were
+written from scratch to support this transition (but released separately).
+
+This change allows for *much* more efficient handling of packed binary data,
+much more data in each server message without overwhelming network bandwidth,
+and allows a much richer data model on the wire.
+
+This was made possible by the recent
+[Cro 0.8.5 release](https://cro.services/docs/releases), which includes
+performance and developer enhancements supporting these changes; MUGS now
+depends on that (or later) Cro release.
+
+As a side effect of the richer data model, some data will be coming through in
+native (or in the case of enums, numeric) format, rather than converted to
+strings as with JSON.  You may be assuming receipt of string data in some
+places; expect to undo any workarounds you may have added.  (This has already
+been fixed in several places in the core MUGS repos.)
+
+ALSO: In order to provide easier-to-read debugging output, some debug code
+outputs messages in prettified JSON format, which as mentioned above can't
+represent the full richness of CBOR data.  This
+[JSON::Fast PR](https://github.com/timo/json_fast/pull/73)
+will at least prevent debug output failures; if you're having debug issues,
+apply the JSON::Fast PR, reinstall it, and try again.
+
+
+## Other Improvements
+
+After the 0.1.1 development release, the members of `#mugs` on Freenode IRC
+offered excellent feedback on issues great and small.  There is still much to
+do to address it all, but together with the JSON → CBOR transition discussed
+above, the following represents a mini-milestone in that direction:
+
+
+### Bug Fixes
+
+* Fix a race condition in game client/UI startup
+* Don't create a second lobby client if directly entering lobby
+* Slightly improve invalid structure error messages
+* Support more terminal types in MUGS::UI::CLI::Input (which previously could
+  hang after displaying a prompt on some terminals)
+* Fix "Use of Nil in string context in sub escape-text" warnings in WebSimple UI
+* Switch to newer client.my-winloss() method for determining winloss status
+  in WebSimple UI
+
+
+### Documentation
+
+* Add GOTCHAS section to MUGS-UI-WebSimple README for issues found by `#mugs`
+  folks that could not be completely fixed in this release
+* Add top-level MUGS repo [docs/ README](../README.md)
+* How To
+  * Add new [docs/howto/](../howto/) tree
+  * Move [Release Guide](../howto/release-guide.md) to docs/howto/
+  * Add [Installing MUGS](../howto/install-mugs.md) guide
+  * Add **WIP** [Port a Game](../howto/port-a-game.md) and
+    [Create a UI](../howto/create-a-ui.md) guides
+* Design
+  * Add [Game Classes orientation doc](../design/game-classes.md)
+  * Add [Data Validation design doc](../design/data-validation.md)
+  * Add [Supporting "Bullet Hell" Games rumination doc](../design/bullet-hell.md)
+  * Add [Logo Ideas historical doc](../design/logo.md)
+  * Add **WIP** [Life of a UI](../design/life-of-a-ui.md) and
+    [Life of a Request](../design/life-of-a-request.md) docs
+
+
+### Genres and Games
+
+* Start implementing PFX "game", testing performance of server-managed particle
+  effects (finally possible with the JSON → CBOR serialization transition)
+* Add a simple UI for the PFX test "game" in MUGS-UI-TUI (`mugs-tui pfx`)
+* Stub in the beginnings of the CardGame genre
+
+
+### Logging/Telemetry
+
+* Track creation Instant for Message objects
+* Add GameStateUpdate as first Log::Timeline::Task in Server
+* Switch --debug default to False (off) for `mugs-ws-server` and
+  `mugs-web-simple`
+
+
+### Performance
+
+* Depend on Cro 0.8.5+ to get significant WebSocket performance improvements
+* Much faster and perf-stable StructureValidator
+* Support fast path for validating packed arrays (where the message decoder
+  itself guarantees that all elements match the array element type)
 
 
 ## Contributions
