Markdown, link, and other minor doc fixes

--- a/docs/announce/v0.1.2.md
+++ b/docs/announce/v0.1.2.md
@@ -72,13 +72,13 @@ This was made possible by the recent
 performance and developer enhancements supporting these changes; MUGS now
 depends on that (or later) Cro release.
 
-As a side effect of the richer data model, some data will be coming through in
+**NOTE 1:** As a side effect of the richer data model, some data will be coming through in
 native (or in the case of enums, numeric) format, rather than converted to
 strings as with JSON.  You may be assuming receipt of string data in some
 places; expect to undo any workarounds you may have added.  (This has already
 been fixed in several places in the core MUGS repos.)
 
-ALSO: In order to provide easier-to-read debugging output, some debug code
+**NOTE 2:** In order to provide easier-to-read debugging output, some debug code
 outputs messages in prettified JSON format, which as mentioned above can't
 represent the full richness of CBOR data.  This
 [JSON::Fast PR](https://github.com/timo/json_fast/pull/73)
@@ -102,7 +102,7 @@ above, the following represents a mini-milestone in that direction:
 * Support more terminal types in MUGS::UI::CLI::Input (which previously could
   hang after displaying a prompt on some terminals)
 * Fix "Use of Nil in string context in sub escape-text" warnings in WebSimple UI
-* Switch to newer client.my-winloss() method for determining winloss status
+* Switch to newer `client.my-winloss()` method for determining winloss status
   in WebSimple UI
 
 
@@ -119,7 +119,7 @@ above, the following represents a mini-milestone in that direction:
     [Create a UI](../howto/create-a-ui.md) guides
 * Design
   * Add [Game Classes orientation doc](../design/game-classes.md)
-  * Add [Data Validation design doc](../design/data-validation.md)
+  * Add [Data Validation design doc](../design/validation.md)
   * Add [Supporting "Bullet Hell" Games rumination doc](../design/bullet-hell.md)
   * Add [Logo Ideas historical doc](../design/logo.md)
   * Add **WIP** [Life of a UI](../design/life-of-a-ui.md) and
