Freenode -> Libera.Chat
... including in docs/announce/, to reduce the likelihood of human or search
engine confusion when looking for contact info.

--- a/docs/announce/v0.1.0.md
+++ b/docs/announce/v0.1.0.md
@@ -249,7 +249,7 @@ Four basic utility modules are included:
 ## Contributions
 
 This first milestone is largely the work of Geoffrey Broadwell (`japhb` on
-Freenode and [GitHub](https://github.com/japhb)).
+Libera.Chat and [GitHub](https://github.com/japhb)).
 
 If you'd like to contribute to future releases, please take a look at
 [our CONTRIBUTING doc](../CONTRIBUTING.md); we'd love to have you!
@@ -257,7 +257,7 @@ If you'd like to contribute to future releases, please take a look at
 
 ## Contacting Us
 
-We are on the #mugs channel on Freenode IRC; please come and ask questions or
+We are on the #mugs channel on Libera.Chat IRC; please come and ask questions or
 offer suggestions!  Please note that we do not yet have 24-hour round-the-clock
 coverage, so please allow some time for response if you don't get one
 immediately.
