--- a/docs/announce/v0.1.2.md
+++ b/docs/announce/v0.1.2.md
@@ -6,8 +6,7 @@
 The [Raku-MUGS org](https://github.com/Raku-MUGS) is proud to present our
 second development release on the way to our next major milestone.  This
 release includes many changes since 0.1.1 to address feedback from our users in
-`#mugs` in Freenode IRC, but the majority of the milestone work is yet to be
-done.  :-)
+`#mugs` in IRC, but the majority of the milestone work is yet to be done.  :-)
 
 
 ## Packaging
@@ -88,10 +87,10 @@ apply the JSON::Fast PR, reinstall it, and try again.
 
 ## Other Improvements
 
-After the 0.1.1 development release, the members of `#mugs` on Freenode IRC
-offered excellent feedback on issues great and small.  There is still much to
-do to address it all, but together with the JSON → CBOR transition discussed
-above, the following represents a mini-milestone in that direction:
+After the 0.1.1 development release, the members of `#mugs` on IRC offered
+excellent feedback on issues great and small.  There is still much to do to
+address it all, but together with the JSON → CBOR transition discussed above,
+the following represents a mini-milestone in that direction:
 
 
 ### Bug Fixes
@@ -153,8 +152,8 @@ above, the following represents a mini-milestone in that direction:
 ## Contributions
 
 This development release is largely the work of Geoffrey Broadwell (`japhb` on
-Freenode and [GitHub](https://github.com/japhb)), based on excellent feedback
-on the [0.1.1 release](v0.1.1.md) from the denizens of `#mugs` on Freenode IRC.
+Libera.Chat and [GitHub](https://github.com/japhb)), based on excellent feedback
+on the [0.1.1 release](v0.1.1.md) from the denizens of `#mugs` in IRC.
 
 If you'd like to contribute to future releases, please take a look at
 [our CONTRIBUTING doc](../CONTRIBUTING.md); we'd love to have you!
@@ -162,13 +161,13 @@ If you'd like to contribute to future releases, please take a look at
 
 ## Contacting Us
 
-We are on the `#mugs` channel on Freenode IRC; please come and ask questions or
+We are on the `#mugs` channel on Libera.Chat IRC; please come and ask questions or
 offer suggestions!  Please note that we do not yet have 24-hour round-the-clock
 coverage, so please stick around and allow some time for response if you don't
 get one immediately.
 
 If you are interested in the more general world of game development on Raku,
-we are also on the `#raku-gamedev` channel, also on Freenode IRC.
+we are also on the `#raku-gamedev` channel, also on Libera.Chat IRC.
 
 
 ## Future
