--- a/docs/announce/v0.1.1.md
+++ b/docs/announce/v0.1.1.md
@@ -141,7 +141,7 @@ summarizes the changes so far:
 ## Contributions
 
 This first milestone is largely the work of Geoffrey Broadwell (`japhb` on
-Freenode and [GitHub](https://github.com/japhb)).
+Libera.Chat and [GitHub](https://github.com/japhb)).
 
 If you'd like to contribute to future releases, please take a look at
 [our CONTRIBUTING doc](../CONTRIBUTING.md); we'd love to have you!
@@ -149,13 +149,13 @@ If you'd like to contribute to future releases, please take a look at
 
 ## Contacting Us
 
-We are on the `#mugs` channel on Freenode IRC; please come and ask questions or
+We are on the `#mugs` channel on Libera.Chat IRC; please come and ask questions or
 offer suggestions!  Please note that we do not yet have 24-hour round-the-clock
 coverage, so please stick around and allow some time for response if you don't
 get one immediately.
 
 If you are interested in the more general world of game development on Raku,
-we are also on the `#raku-gamedev` channel, also on Freenode IRC.
+we are also on the `#raku-gamedev` channel, also on Libera.Chat IRC.
 
 
 ## Future
