Update v0.1.2.md to reflect JSON::Fast PR merge

--- a/docs/announce/v0.1.2.md
+++ b/docs/announce/v0.1.2.md
@@ -82,7 +82,8 @@ outputs messages in prettified JSON format, which as mentioned above can't
 represent the full richness of CBOR data.  This
 [JSON::Fast PR](https://github.com/timo/json_fast/pull/73)
 will at least prevent debug output failures; if you're having debug issues,
-apply the JSON::Fast PR, reinstall it, and try again.
+~~apply the JSON::Fast PR, reinstall it, and try again.~~
+**UPDATE: The PR has been merged, just upgrade to JSON::Fast 0.16 or later.**
 
 
 ## Other Improvements
